crates/uitest/fixtures/ty_check/loop_control.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/loop_control.fe
---
error[8-0020]: `continue` is not allowed outside of a loop
  ┌─ loop_control.fe:2:5
  │
2 │     continue
  │     ^^^^^^^^ `continue` is not allowed here

error[8-0020]: `break` is not allowed outside of a loop
  ┌─ loop_control.fe:3:5
  │
3 │     break
  │     ^^^^^ `break` is not allowed here


